# lane-marking-recognition-for-duckietown

./: Readme.md  Training.ipynb
InferenceExample/: CMakeLists.txt  Dockerfile  RoadMarkupsSegmentationNet.engine  main.cu
